Bug 870849 - Gap between the tab-strip and top of titlebar is too large when in restored mode, r=dao
UltraBlame original commit: ccd9c2be155c97ea8af0aad96f31bc9e279df7f3

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -26,15 +26,15 @@
   -moz-box-flex: 1; 
 }
 
-#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) {
-  visibility: hidden;
+
+
+
+#toolbar-menubar:not([inactive]) {
+  margin-bottom: 3px;
 }
 
-#main-window[sizemode="normal"] #toolbar-menubar,
-
-
-#main-window:not([sizemode="fullscreen"]) #toolbar-menubar:-moz-any(:not([autohide="true"]), :not([inactive="true"])) {
-  margin-bottom: 4px;
+#main-window[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] {
+  margin-bottom: 15px;
 }
 
 #toolbar-menubar:not([autohide="true"]) {
